finished the functions for the form

--- a/index.html
+++ b/index.html
@@ -16,61 +16,19 @@
         <div class="card-header">
           <h2>Generate a Password</h2>
         </div>
-        <!-- Following Code needs to be put in by JS -->
-        <div class="form" id="passwordForm">
-
-          <div class="length">
-            <h3>Password Length (8-128)</h3>
-            <input type="number">
-          </div>
-
-          <div class="uppercase">
-            <h3>Uppercase Letters</h3>
-            <label class="switch">
-              <input type="checkbox">
-              <span class="slider round"></span>
-            </label>
-          </div>
-
-          <div class="lowercase">
-            <h3>Lowercase Letters</h3>
-            <label class="switch">
-              <input type="checkbox">
-              <span class="slider round"></span>
-            </label>
-          </div>
-
-          <div class="numbers">
-            <h3>Numbers</h3>
-            <label class="switch">
-              <input type="checkbox">
-              <span class="slider round"></span>
-            </label>
-          </div>
-
-          <div class="special-characters">
-            <h3>Special Characters</h3>
-            <label class="switch">
-              <input type="checkbox">
-              <span class="slider round"></span>
-            </label>
-          </div> 
-
-        </div>
-        <!-- From above comment to here -->
-        <!-- <div class="card-body">
+        <div class="card-body" id="card-body">
           <textarea
             readonly
             id="password"
             placeholder="Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
-        </div> -->
+        </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
   </body>
 </html>
