--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/styles/style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -16,7 +16,7 @@
         <div class="card-header">
           <h2>Generate a Password</h2>
         </div>
-        <div class="card-body" id="card-body">
+        <div class="card-body">
           <textarea
             readonly
             id="password"
@@ -25,10 +25,10 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+          <a href="assets/html/form.html"><button id="generate" class="btn">Generate Password</button></a>
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="assets/script/script.js"></script>
   </body>
 </html>
